[package]
name = "parity-wordlist"
version = "1.2.1"
description = "Word list used to generate brain wallets for Parity."
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/wordlist"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.0"
rand = "0.5"
itertools = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"
